[gd_scene load_steps=28 format=3 uid="uid://d1hbvc4sba303"]

[ext_resource type="Script" path="res://scripts/enemy_skelly.gd" id="1_jjatu"]
[ext_resource type="Texture2D" uid="uid://baem22esq4hwy" path="res://assets/skelly_spritesheets/Skeleton Attack.png" id="1_ltkws"]
[ext_resource type="Texture2D" uid="uid://bn00kb2c4btmi" path="res://assets/skelly_spritesheets/Skeleton Dead.png" id="2_vlpxn"]
[ext_resource type="Texture2D" uid="uid://cddf11wudlce3" path="res://assets/skelly_spritesheets/Skeleton Idle.png" id="3_oii8r"]
[ext_resource type="Texture2D" uid="uid://2d8ptfifdkdi" path="res://assets/skelly_spritesheets/Skeleton Walk.png" id="4_8lgge"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gx5an"]
atlas = ExtResource("1_ltkws")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhrau"]
atlas = ExtResource("1_ltkws")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8h0f"]
atlas = ExtResource("1_ltkws")
region = Rect2(0, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pkwn"]
atlas = ExtResource("1_ltkws")
region = Rect2(320, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbkup"]
atlas = ExtResource("2_vlpxn")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_br1v7"]
atlas = ExtResource("2_vlpxn")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sady"]
atlas = ExtResource("2_vlpxn")
region = Rect2(0, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4ukh"]
atlas = ExtResource("2_vlpxn")
region = Rect2(320, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_28jlq"]
atlas = ExtResource("2_vlpxn")
region = Rect2(0, 640, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfgmt"]
atlas = ExtResource("3_oii8r")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_pphjm"]
atlas = ExtResource("3_oii8r")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfgvj"]
atlas = ExtResource("3_oii8r")
region = Rect2(0, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfcmi"]
atlas = ExtResource("3_oii8r")
region = Rect2(320, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_k14pv"]
atlas = ExtResource("4_8lgge")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmsst"]
atlas = ExtResource("4_8lgge")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_yigf5"]
atlas = ExtResource("4_8lgge")
region = Rect2(0, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lb71"]
atlas = ExtResource("4_8lgge")
region = Rect2(320, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jqp2"]
atlas = ExtResource("4_8lgge")
region = Rect2(0, 640, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqph6"]
atlas = ExtResource("4_8lgge")
region = Rect2(320, 640, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_psmsh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx5an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhrau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8h0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pkwn")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbkup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br1v7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sady")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4ukh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28jlq")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfgmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pphjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfgvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfcmi")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k14pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmsst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yigf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lb71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jqp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqph6")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_s0att"]
radius = 848.215

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5uyg1"]
size = Vector2(84.9409, 225.806)

[node name="enemy_skelly" type="CharacterBody2D"]
z_as_relative = false
position = Vector2(-1, -18)
scale = Vector2(0.155, 0.155)
collision_layer = 7
collision_mask = 7
script = ExtResource("1_jjatu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_psmsh")
animation = &"death"
frame = 4
frame_progress = 1.0
speed_scale = 0.7

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
visible = false
light_mask = 7
visibility_layer = 7
position = Vector2(3.5, 0.25)
shape = SubResource("CircleShape2D_s0att")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
z_index = 10
z_as_relative = false
position = Vector2(6.45161, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 7
visibility_layer = 7
z_index = 10
shape = SubResource("RectangleShape2D_5uyg1")

[connection signal="area_shape_exited" from="detection_area" to="." method="_on_detection_area_area_shape_exited"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
